apps/staging/kubejobhunt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-job-ui
  namespace: kubejobhunt 
spec:
  ingressClassName: traefik
  rules:
    - host: jobs.danils.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-job-ui 
                port:
                  number: 80
